Fix layout jumping in practice mode and move question counter back to top

--- a/style.css
+++ b/style.css
@@ -490,6 +490,8 @@ h1 {
     font-weight: 800;
     margin-bottom: 0;
     white-space: nowrap;
+    width: 200px;
+    text-align: right;
 }
 
 #answer-input {
